--- a/ProyectoCinepolis/src/main/java/presentacion/ctlogo/frmRegistroUsu.form
+++ b/ProyectoCinepolis/src/main/java/presentacion/ctlogo/frmRegistroUsu.form
@@ -6,7 +6,7 @@
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
-    <SyntheticProperty name="generateCenter" type="boolean" value="false"/>
+    <SyntheticProperty name="generateCenter" type="boolean" value="true"/>
   </SyntheticProperties>
   <AuxValues>
     <AuxValue name="FormSettings_autoResourcing" type="java.lang.Integer" value="0"/>
@@ -313,7 +313,7 @@
         </Component>
         <Component class="javax.swing.JTextField" name="txtFecha">
           <Properties>
-            <Property name="text" type="java.lang.String" value="yyyy/mm/dd"/>
+            <Property name="text" type="java.lang.String" value="yyyy-mm-dd"/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtFechaActionPerformed"/>
